<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/>
	</parent>

	<groupId>com.inmopaco</groupId>
	<artifactId>EurekaServer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>EurekaServer</name>
	<description>EurekaServer</description>

	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2024.0.0</spring-cloud.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
<!--				<configuration>-->
<!--					<buildArgs>-->
<!--						<buildArg>&#45;&#45;allow-incomplete-classpath</buildArg>-->
<!--						<buildArg>&#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED</buildArg>-->
<!--						<buildArg>&#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED</buildArg>-->

<!--						<buildArg>&#45;&#45;initialize-at-build-time=org.slf4j,ch.qos.logback</buildArg>-->

<!--						<buildArg>&#45;&#45;initialize-at-run-time=com.netflix.discovery.converters.EntityBodyConverter</buildArg>-->
<!--						<buildArg>&#45;&#45;initialize-at-run-time=com.netflix.appinfo.InstanceInfo</buildArg>-->
<!--						<buildArg>&#45;&#45;initialize-at-run-time=org.springframework.cloud.netflix.eureka.server.CloudJacksonJson</buildArg>-->
<!--					</buildArgs>-->
<!--				</configuration>-->
				<configuration>
					<buildArgs>
						<buildArg>--allow-incomplete-classpath</buildArg>
						<buildArg>--add-opens=java.base/java.lang=ALL-UNNAMED</buildArg>
						<buildArg>--add-opens=java.base/java.util=ALL-UNNAMED</buildArg>

<!--						<buildArg>&#45;&#45;initialize-at-build-time=org.slf4j,ch.qos.logback</buildArg>-->

						<buildArg>--initialize-at-run-time=com.netflix.discovery.converters.EntityBodyConverter</buildArg>
						<buildArg>--initialize-at-run-time=com.netflix.appinfo.InstanceInfo</buildArg>
						<buildArg>--initialize-at-run-time=org.springframework.cloud.netflix.eureka.server.CloudJacksonJson</buildArg>
						<buildArg>--initialize-at-run-time=org.springframework.cloud.netflix.eureka.server.EurekaServerAutoConfiguration</buildArg>

						<buildArg>--initialize-at-run-time=org.slf4j,ch.qos.logback</buildArg>

						<buildArg>-H:+AddAllCharsets</buildArg>
						<buildArg>-H:-UseServiceLoaderFeature</buildArg>
						<buildArg>-H:+ReportExceptionStackTraces</buildArg>
					</buildArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>